apps/shiplog/tests/render_json/snapshots/render_json__format_stability__coverage_manifest_minimal.snap
---
source: apps/shiplog/tests/render_json/format_stability.rs
expression: text
---
{
  "run_id": "min",
  "generated_at": "2025-06-01T12:00:00Z",
  "user": "u",
  "window": {
    "since": "2025-01-01",
    "until": "2025-01-02"
  },
  "mode": "created",
  "sources": [],
  "slices": [],
  "warnings": [],
  "completeness": "Unknown"
}
