apps/shiplog/tests/render_json/snapshots/render_json__format_stability__jsonl_mixed_events.snap
---
source: apps/shiplog/tests/render_json/format_stability.rs
expression: text
---
{"id":"5fe344ad0cf9acbffb4bc45a718ad98b4138abd47bb97882294b7a6d74e78db5","kind":"PullRequest","occurred_at":"2025-06-01T12:00:00Z","actor":{"login":"octocat","id":1},"repo":{"full_name":"acme/widgets","html_url":"https://github.com/acme/widgets","visibility":"Public"},"payload":{"type":"PullRequest","data":{"number":42,"title":"Add feature X","state":"Merged","created_at":"2025-06-01T12:00:00Z","merged_at":"2025-06-01T12:00:00Z","additions":100,"deletions":20,"changed_files":5,"touched_paths_hint":["src/lib.rs","tests/integration.rs"],"window":{"since":"2025-01-01","until":"2025-04-01"}}},"tags":["feature"],"links":[{"label":"pr","url":"https://github.com/acme/widgets/pull/42"}],"source":{"system":"github","url":"https://api.github.com/repos/acme/widgets/pulls/42","opaque_id":"PR_abc123"}}
{"id":"c02b246136b4fb94dab57b4b2d80262927691987738d8833caf911baf613680d","kind":"Review","occurred_at":"2025-06-01T12:00:00Z","actor":{"login":"reviewer","id":2},"repo":{"full_name":"acme/widgets","html_url":"https://github.com/acme/widgets","visibility":"Private"},"payload":{"type":"Review","data":{"pull_number":42,"pull_title":"Add feature X","submitted_at":"2025-06-01T12:00:00Z","state":"approved","window":{"since":"2025-01-01","until":"2025-04-01"}}},"tags":["review"],"links":[{"label":"pr","url":"https://github.com/acme/widgets/pull/42"}],"source":{"system":"github","url":null,"opaque_id":"PRR_def456"}}
{"id":"af6344469ff026bc52665e313f55e3a841d5eeb8c0e617fd0e03de7e4bc02421","kind":"Manual","occurred_at":"2025-06-01T12:00:00Z","actor":{"login":"oncall-eng","id":null},"repo":{"full_name":"acme/widgets","html_url":null,"visibility":"Unknown"},"payload":{"type":"Manual","data":{"event_type":"Incident","title":"P1 incident response","description":"Responded to production outage affecting payments","started_at":"2025-03-15","ended_at":"2025-03-16","impact":"Reduced MTTR by 50%"}},"tags":["incident","oncall"],"links":[{"label":"postmortem","url":"https://wiki.internal/incident-42"}],"source":{"system":"manual","url":null,"opaque_id":null}}
